Setup unit tests configurations